--- a/templates/base.html
+++ b/templates/base.html
@@ -271,6 +271,18 @@
 
     <script src= ' {% static 'js/main.js'%}'></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const menuToggle = document.getElementById('menu-toggle');
+            const menu = document.getElementById('menu');
+
+            menuToggle.addEventListener('click', function(){
+                menu.classList.toggle('hidden');
+            });
+        });
+    </script>
+
+
 </body>
 
 </html>
