final work done

--- a/templates/about.html
+++ b/templates/about.html
@@ -56,15 +56,15 @@
     </button> {% endcomment %}
 </div>
 
-<div class="text-center  flex justify-center mr-20 mt-10 gap-8 mb-12">
+<div class="max-w-3xl mx-auto px-4 text-center mt-10 mb-12">
     <div class="mb-6">
         <h4 class="text-3xl font-bold text-black uppercase tracking-wider mb-4">About Us!</h4>
-        <p class="mb-2 font-medium text-gray-800 mb-4">
+        <p class="mb-4 font-medium text-gray-800 mb-4">
             <strong>Why Choose Hermoni for Event Management?</strong><br>
             Hermoni is not just another event management tool — it is a streamlined, purpose-built platform that simplifies every stage of event planning, execution, and follow-up. Designed for modern organizations, institutions, and individuals, Hermoni offers unmatched flexibility, clarity, and efficiency.
         </p>
 
-        <p class="mb-2 font-semibold text-gray-700">Here’s why Hermoni stands out in the world of event management:</p>
+        <p class="mb-4 font-semibold text-gray-700">Here’s why Hermoni stands out in the world of event management:</p>
         
         <ol class="list-decimal list-inside mb-6 space-y-2 text-gray-800">
             <li><strong>Simplified Event Creation & Management:</strong>Intuitive interface to quickly create and manage events.</li>
