--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,12 @@
 {% block content %}
 
 {% comment "hero" %}{% endcomment %}
-<section class="relative bg-cover bg-center h-screen flex items-center justify-center" 
+<section class="relative bg-cover bg-center mt-0 h-screen flex items-center justify-center" 
     style="background-image: url('{% static 'images/hero.jpg' %}'); background-size:cover;background-position:center;">
     <div class="absolute inset-0 bg-black bg-opacity-50"></div>
     
     <div class="relative z-10 text-center text-white px-4">
-        <h2 class="text-5xl md:text--7xl font-bold mb-4">Welcome to Hermoni</h2>
+        <h2 class="text-5xl md:text-7xl font-bold mb-4">Welcome to Hermoni</h2>
         <p class="text-xl md:text-2xl ">Your Best Event Experience</p>
     </div>
 </section>
