--- a/templates/base.html
+++ b/templates/base.html
@@ -12,66 +12,58 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-   
 
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
     <!-- Main content of website -->
+    <!--new-->
+    
+        
     <nav class="bg-orange-600 p-4 sticky top-0 text-white z-50">
-        <div class="container mx-auto flex justify-between items-center">
-            
-            <div class="hidden md:block w-1/3"></div>
-
-
-            <h1 class="text-3xl font-bold text-center absolute left-1/2 transform -translate-x-1/2 text-white">HERMONI</h1>
-            
-            <button id="menu-toggle" class="md:hidden text-white focus:outline-none">
-                <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-                    <path d="M4 5h16M4 12h16M4 19h16"></path>
-                </svg>    
-            </button>
-            
-
-            <div id="menu" class="hidden md:flex md:items-center  md:space-x-6 flex-col md:flex-row mt-4 md:mt-0">
-
-                {% comment "events" %}{% endcomment %}
-                <div class="mr-2 flex">
-                    <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
-                </div>
-                <div class="relative group">
-                    <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
-                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                        <a href="{% url 'event_create' %}" class="block px-4 py-2 hover:bg-gray-200">Create Event</a>
-                        <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
-                    </div>
-                </div>
-
-                {% comment "Participants" %}{% endcomment %}
-                <div class="relative group">
-                    <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
-                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                        <a href="{% url 'participant_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Participant</a>
-                    </div>
-                </div>
-
-                {% comment "Category" %}{% endcomment %}
-                <div class="relative group">
-                    <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
-                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                        <a href="{% url 'category_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Category</a>
-                    </div>
-                </div>
-
-                {% comment "dashboard" %}{% endcomment %}
-                <div class="relative group">
-                    <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
-                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                        <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">View States</a>
-                    </div>
-                </div>
+        <div class="px-4  py-2  mx-auto">
+            <div class="relative flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
+                <h1 class="text-3xl font-bold text-center absolute left-1/2 transform -translate-x-1/2 text-white">HERMONI</h1>
+            </div>
+            <div class="flex items-center">
+                <ul class="flex flex-row font-medium mt-3 space-x-6 rtl:space-x-reverse text-sm">
+                    <li>
+                        <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
+                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                            <a href="{% url 'event_create' %}" class="block px-4 py-2 hover:bg-gray-200">Create Event</a>
+                            <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
+                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                            <a href="{% url 'participant_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Participant</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
+                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                            <a href="{% url 'category_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Category</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
+                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                            <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">View States</a>
+                        </div>
+                    </li>
+                    
+                </ul>
             </div>
         </div>
     </nav>
+
+
+    <!--old nav -->
+
+     
 
     <div class="container mx-auto mt-8">
         {% block content %}
