base.html nav correction final

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div id="default-carousel" class="relative w-full md:px-20 pt-10" data-carousel="slide">
+<div id="default-carousel" class="relative w-full md:px-20" data-carousel="slide">
     <!-- Carousel wrapper -->
     <div class="relative h-[400px]  overflow-hidden rounded-lg md:h-[550px]">
          <!-- Item 1 -->
