--- a/templates/base.html
+++ b/templates/base.html
@@ -17,51 +17,87 @@
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
     <!-- Main content of website -->
     <!--new-->
-    
-        
-    <nav class="bg-orange-600 p-4 sticky top-0 text-white z-50">
-        <div class="px-4  py-2  mx-auto">
-            <div class="relative flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
-                <h1 class="text-3xl font-bold text-center absolute left-1/2 transform -translate-x-1/2 text-white">HERMONI</h1>
-            </div>
-            <div class="flex items-center">
-                <ul class="flex flex-row flex-wrap font-medium mt-3 space-x-6 rtl:space-x-reverse text-s">
-                    <li class="relative group">
-                        <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
-                    </li>
-                    <li class="relative group">
-                        <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
-                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                            <a href="{% url 'event_create' %}" class="block px-4 py-2 hover:bg-gray-200">Create Event</a>
-                            <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
-                        </div>
-                    </li>
-                    <li class="relative group">
-                        <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
-                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                            <a href="{% url 'participant_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Participant</a>
-                        </div>
-                    </li>
-                    <li class="relative group">
-                        <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
-                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                            <a href="{% url 'category_create' %}" class="block px-4 py-2 hover:bg-gray-200">Add Category</a>
-                        </div>
-                    </li>
-                    <li class="relative group">
-                        <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
-                        <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
-                            <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">View States</a>
-                        </div>
-                    </li>
-                    
-                </ul>
-            </div>
+    <nav class="bg-orange-600 sticky top-0 -50 text-white">
+        <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+            <!--logo-->
+            <h2 class="text-3xl font-bold">HERMONI</h2>
+
+            <!--Desktop menu-->
+            <ul class="hidden md:flex space-x-6 font medium text-sm">
+                <li class="relative group">
+                    <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'event_create' %}" class="block px-2 py-1 hover:bg-gray-200">Create Event</a>
+                        <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'participant_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Participant</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'category_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Category</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'dashboard' %}" class="block px-2 py-1 hover:bg-gray-200">View States</a>
+                    </div>
+                </li>
+            </ul>
+            <!--humberger-->
+            <button id="menu-toggle" class="md:hidden focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                    stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+
+        <!--mobile-menu-->
+        <div id="mobile-menu" class="hidden md:hidden px-4 pb-2">
+            <ul class="flex flex-col space-y-2 font-medium text-sm">
+                <li class="relative group">
+                    <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'event_create' %}" class="block px-2 py-1 hover:bg-gray-200">Create Event</a>
+                        <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'participant_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Participant</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'category_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Category</a>
+                    </div>
+                </li>
+                <li class="relative group">
+                    <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
+                    <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
+                        <a href="{% url 'dashboard' %}" class="block px-2 py-1 hover:bg-gray-200">View States</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
 
-
-    <!--old nav -->
 
      
 
@@ -264,15 +300,46 @@
     <script src= ' {% static 'js/main.js'%}'></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const menuToggle = document.getElementById('menu-toggle');
-            const menu = document.getElementById('menu');
+        const toggle = document.getElementById('menu-toggle')
+        const menu = document.getElementById('mobile-menu')
+        const eventsToggle = document.getElementById('mobile-events-toggle')
+        const eventsMenu = document.getElementById('mobile-events-menu')
+        const categoryToggle = document.getElementById('mobile-category-toggle')
+        const categoryMenu = document.getElementById('mobile-category-menu')
 
-            menuToggle.addEventListener('click', function(){
-                menu.classList.toggle('hidden');
-            });
-        });
+        toggle.addEventListener('click',() => {
+            menu.classList.toggle('hidden');
+        })
+
+        eventsToggle.addEventListener('click',() => {
+            eventsMenu.classList.toggle('hidden');
+        })
+        categoryToggle.addEventListener('click',() => {
+            categoryMenu.classList.toggle('hidden');
+        })
     </script>
+    {% comment %} <script>
+        const toggle = document.getElementById('menu-toggle');
+        const menu = document.getElementById('mobile-menu');
+        const eventsToggle = document.getElementById('mobile-events-toggle');
+        const eventsMenu = document.getElementById('mobile-events-menu');
+        const categoryToggle = document.getElementById('mobile-category-toggle');
+        const categoryMenu = document.getElementById('mobile-category-menu');
+
+        toggle.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+
+        eventsToggle.addEventListener('click', () => {
+            eventsMenu.classList.toggle('hidden');
+        });
+
+        categoryToggle.addEventListener('click', () => {
+            categoryMenu.classList.toggle('hidden');
+        });
+    </script> {% endcomment %}
+
+
 
 
 </body>
