--- a/templates/category/category_form.html
+++ b/templates/category/category_form.html
@@ -3,18 +3,34 @@
 {% block sidebar %}{% endblock sidebar %}
 
 {% block content %}
+<style>
+  form p{
+    margin-bottom:1rem;
+  }
+  form p input,
+  form p textarea,
+  form p select{
+    width: 100%;
+    padding: 0.5rem;
+    border:1px solid #ccc;
+    border-radius: 0.375rem:
+ }
+</style>
 
-<div class="p-8 mt-8 max-w-lg mx-auto">
-    <div class="w-full mx-w-md p-8 bg-gray-300 rounded-lg shadow-md">
+
+<div class="p-4 sm:p-6 md:p-8 mt-8 max-w-md mx-auto">
+    <div class="w-full max-w-md p-8 bg-gray-300 rounded-lg shadow-md">
         <h2 class="text-2xl font-bold mb-4 text-center">Category Form</h2>
 
 
-        <form method="post" class="space-y-4 justify center">
-        {% csrf_token %}
-        {{ form.as_p}}    
+        <form method="post" class="space-y-4">
+            {% csrf_token %}
+            {{ form.as_p}}    
 
-            <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Save</button>
-            <a href="{% url 'category_list' %}" class="text-blue-600 hover:underline ml-4">Cancel</a>
+            <div class="flex items-center space-x-4">
+                <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded">Save</button>
+                <a href="{% url 'category_list' %}" class="text-blue-600 hover:underline ml-4">Cancel</a>
+            </div>
         </form>
     </div>
 </div>
