--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
     <!-- Main content of website -->
     <!--new-->
-    <nav class="bg-orange-600 sticky top-0 -50 text-white">
+    <nav class="bg-orange-600 sticky top-0 z-50 text-white">
         <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
             <!--logo-->
             <h2 class="text-3xl font-bold">HERMONI</h2>
@@ -69,31 +69,82 @@
                 <li class="relative group">
                     <a href="{% url 'home' %}" class="text-white hover:underline">Home</a>
                 </li>
-                <li class="relative group">
+                <li>
+                    <button class="w-full flex justify-between items-center submenu-toggle">
+                        <span >Events</span>
+                        <svg class="w-4 h-4 transform transition-transform" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </svg>
+                    </button>
+                    <div class="hidden flex-col pl-4 space-y-1">
+                        <a href="{% url 'event_create' %}" class="block">Create Event</a>
+                        <a href="{% url 'event_list' %}" class="block">Event List</a>
+                    </div>
+                </li>
+                {% comment %} <li class="relative group">
                     <a href="{% url 'event_list' %}" class="hover:underline text-white">Events</a>
                     <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
                         <a href="{% url 'event_create' %}" class="block px-2 py-1 hover:bg-gray-200">Create Event</a>
                         <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-200">Dashboard</a>
                     </div>
+                </li> {% endcomment %}
+                <li>
+                    <button class="w-full flex justify-between items-center submenu-toggle">
+                        <span >Participants</span>
+                        <svg class="w-4 h-4 transform transition-transform" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </svg>
+                    </button>
+                    <div class="hidden flex-col pl-4 space-y-1">
+                        <a href="{% url 'participant_create' %}" class="block">Add Participants</a>
+                        <a href="{% url 'participant_list' %}" class="block">Participants List</a>
+                    </div>
                 </li>
-                <li class="relative group">
+                {% comment %} <li class="relative group">
                     <a href="{% url 'participant_list' %}" class="hover:underline text-white">Participants</a>
                     <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
                         <a href="{% url 'participant_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Participant</a>
                     </div>
+                </li> {% endcomment %}
+                <li>
+                    <button class="w-full flex justify-between items-center submenu-toggle">
+                        <span >Categories</span>
+                        <svg class="w-4 h-4 transform transition-transform" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </svg>
+                    </button>
+                    <div class="hidden flex-col pl-4 space-y-1">
+                        <a href="{% url 'category_create' %}" class="block">Add Categories</a>
+                        <a href="{% url 'category_list' %}" class="block">Categories List</a>
+                    </div>
                 </li>
-                <li class="relative group">
+                {% comment %} <li class="relative group">
                     <a href="{% url 'category_list' %}" class="hover:underline text-white">Category</a>
                     <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
                         <a href="{% url 'category_create' %}" class="block px-2 py-1 hover:bg-gray-200">Add Category</a>
                     </div>
+                </li> {% endcomment %}
+                <li>
+                    <button class="w-full flex justify-between items-center submenu-toggle">
+                        <span >Dashboard</span>
+                        <svg class="w-4 h-4 transform transition-transform" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </svg>
+                    </button>
+                    <div class="hidden flex-col pl-4 space-y-1">
+                        <a href="{% url 'dashboard' %}" class="block">View States</a>
+                    </div>
                 </li>
-                <li class="relative group">
+                {% comment %} <li class="relative group">
                     <a href="{% url 'dashboard' %}" class="hover:underline text-white">Dashboard</a>
                     <div class="absolute hidden group-hover:block bg-white text-black mt-2 rounded shadow min-w-[150px]">
                         <a href="{% url 'dashboard' %}" class="block px-2 py-1 hover:bg-gray-200">View States</a>
                     </div>
-                </li>
+                </li> {% endcomment %}
             </ul>
         </div>
     </nav>
@@ -132,7 +183,7 @@
 
             {% comment "grid01" %}{% endcomment %}
             <a href="{% url 'event_list' %}" class="bg-gray-300 rounded-lg-shadow-lg overflow-hidden hover:shadow-xl transition duration-300">
-                <img class="w-full h-72 object-cover" src="{% static 'images/ser.jpg' %}" alt="">
+                <img class="w-full h-72 object-cover" src="{% static 'images/service2.webp' %}" alt="">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Service Page</h5>
                     <p class="mb-3 font-normal text-gray-700 dark:text-black">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
@@ -149,21 +200,19 @@
                 </div>
             </a>
 
-
             {% comment "grid01" %}{% endcomment %}
             <a href="{% url 'event_list' %}" class="bg-gray-300 rounded-lg-shadow-lg overflow-hidden hover:shadow-xl transition duration-300">
-                <img class="w-full h-72 object-cover" src="{% static 'images/default.jpg' %}" alt="">
+                <img class="w-full h-72 object-cover" src="{% static 'images/events.webp' %}" alt="">
                 <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Event Grid</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Event List</h5>
                     <p class="mb-3 font-normal text-gray-700 dark:text-black">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
                 </div>
             </a>
-
             {% comment "grid01" %}{% endcomment %}
             <a href="#" class="bg-gray-300 rounded-lg-shadow-lg overflow-hidden hover:shadow-xl transition duration-300">
-                <img class="w-full h-72 object-cover" src="{% static 'images/default.jpg' %}" alt="">
+                <img class="w-full h-72 object-cover" src="{% static 'images/nana.avif' %}" alt="">
                 <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Event List</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Achivements</h5>
                     <p class="mb-3 font-normal text-gray-700 dark:text-black">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
                 </div>
             </a>
@@ -230,7 +279,7 @@
 
 
     <footer class="bg-gray-800 text-gray-300 py-12">
-        <div class="max-w-7xl mx-auto px-4 grid grid -cols-1 md:grid-cols-5 gap-8">
+        <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-5 gap-8">
 
             {% comment "Brand" %}{% endcomment %}
             <div>
@@ -298,48 +347,32 @@
     </footer>
 
     <script src= ' {% static 'js/main.js'%}'></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://unpkg.com/flowbite@latest/dist/flowbite.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <script>
-        const toggle = document.getElementById('menu-toggle')
-        const menu = document.getElementById('mobile-menu')
-        const eventsToggle = document.getElementById('mobile-events-toggle')
-        const eventsMenu = document.getElementById('mobile-events-menu')
-        const categoryToggle = document.getElementById('mobile-category-toggle')
-        const categoryMenu = document.getElementById('mobile-category-menu')
+        // Hamburger toggle for mobile menu
+        const menuToggle = document.getElementById('menu-toggle');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-        toggle.addEventListener('click',() => {
-            menu.classList.toggle('hidden');
+        menuToggle.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
         })
 
-        eventsToggle.addEventListener('click',() => {
-            eventsMenu.classList.toggle('hidden');
-        })
-        categoryToggle.addEventListener('click',() => {
-            categoryMenu.classList.toggle('hidden');
-        })
+        const submenuToggles = document.querySelectorAll('.submenu-toggle');
+
+        submenuToggles.forEach((btn) => {
+            btn.addEventListener('click', () => {
+                const subMenu = btn.nextElementSibling;
+                subMenu.classList.toggle('hidden');
+
+                btn.querySelector('svg').classList.toggle('rotate-180');
+
+            });
+        });
     </script>
-    {% comment %} <script>
-        const toggle = document.getElementById('menu-toggle');
-        const menu = document.getElementById('mobile-menu');
-        const eventsToggle = document.getElementById('mobile-events-toggle');
-        const eventsMenu = document.getElementById('mobile-events-menu');
-        const categoryToggle = document.getElementById('mobile-category-toggle');
-        const categoryMenu = document.getElementById('mobile-category-menu');
-
-        toggle.addEventListener('click', () => {
-            menu.classList.toggle('hidden');
-        });
-
-        eventsToggle.addEventListener('click', () => {
-            eventsMenu.classList.toggle('hidden');
-        });
-
-        categoryToggle.addEventListener('click', () => {
-            categoryMenu.classList.toggle('hidden');
-        });
-    </script> {% endcomment %}
-
-
+    
 
 
 </body>
