--- a/templates/events/event_confirm_delete.html
+++ b/templates/events/event_confirm_delete.html
@@ -7,17 +7,20 @@
 
 {% block content %}
 
-<h2 class="text-2xl font-bold mb-4">Delete Event</h2>
+<div class="mb-20">
+    <h2 class="text-2xl font-bold mb-4">Delete Event</h2>
 
-<p>Are you sure you want to delete<strong>{{ event.name }} </strong></p>
+    <p>Are you sure you want to delete<strong>{{ event.name }} </strong></p>
 
-<form method="post" class="mt-4">
-    {% csrf_token %}
-    {{ form.as_p}}
+    <form method="post" class="mt-4">
+        {% csrf_token %}
+        {{ form.as_p}}
 
-    <button type="submit" class="bg-red-600 text-white px-4 py-2 rounded">Confirm Delete</button>
-    <a href="{% url 'event_list' %}" class="text-blue-600 hover:underline ml-4">Cancel</a>
-</form>
+        <button type="submit" class="bg-red-600 text-white px-4 py-2 rounded">Confirm Delete</button>
+        <a href="{% url 'event_list' %}" class="text-blue-600 hover:underline ml-4">Cancel</a>
+    </form>
+
+</div>
 
 
 {% endblock  %}
